--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "(npm run build) && (node ./upload-script.js)"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +43,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.8",
+    "aws-sdk": "^2.1058.0",
+    "dotenv": "^14.0.0",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
