--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.27.2",
+    "firebase": "^9.9.2",
+    "ga-4-react": "^0.1.281",
     "mathjs": "^9.5.1",
     "react": "^17.0.2",
     "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
+    "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "semantic-ui-css": "^2.4.1",
