--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.4.1",
+    "@craco/craco": "^5.9.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -17,8 +17,8 @@
     "react-draggable": "^4.4.4",
     "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
-    "semantic-ui-css": "^2.4.1",
+    "react-scripts": "^5.0.1",
+    "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.0.4",
     "web-vitals": "^1.1.2"
   },
@@ -51,7 +51,6 @@
     "autoprefixer": "^9.8.8",
     "aws-sdk": "^2.1058.0",
     "dotenv": "^14.0.0",
-    "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "postcss": "^7.0.39"
   }
 }
